modify icon to zzz4ck.png

--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ owner:
   bio: "zzz4ck" # 填写作者信息：博客描述
 
 # Data
-gavatar: img/head.png # 浏览器地址栏小图标，可自定义更改
-favicon: img/head.png # 浏览器地址栏小图标，可自定义更改
+gavatar: img/zzz4ck.png # 浏览器地址栏小图标，可自定义更改
+favicon: img/zzz4ck.ico # 浏览器地址栏小图标，可自定义更改
 
 douban_username:  # 你的豆瓣id
 twitter_username: 
